# aixon

./: .gitignore  CHANGELOG.md  ISSUES.md  LICENSE  RAG_KNOWLEDGE_BASE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml  test.yml
aixon/: __init__.py  _tools.py  agent.py  cli.py  connector.py  discovery.py  embedding.py  exceptions.py  llm.py  logging.py  mcp.py  message.py  reasoning.py  registry.py  retriever.py  runtime.py  state.py  toolcache.py  usage.py
aixon/_adapters/: __init__.py  tools.py
aixon/_interop/: __init__.py  messages.py  tools.py
aixon/agents/: __init__.py  llm_agent.py  orchestrator.py  reflective.py  tool_agent.py
aixon/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  xai.py  zai.py
aixon/retrievers/: __init__.py  ragie.py  tavily.py  weaviate.py
aixon/server/: __init__.py  protocol.py  server.py  usage.py
aixon/server/adapters/: __init__.py  anthropic.py  openai.py
docs/: agents.md  architecture.md  cli.md  olympus-vs-aixon.md  orchestrator.md  quickstart.md  retrieval.md  retrievers.md  server.md  tracing.md
docs/superpowers/: aixon-interface-contract.md
docs/superpowers/plans/: 2026-06-23-aixon-cli.md  2026-06-23-aixon-documentation.md  2026-06-23-aixon-foundation.md  2026-06-23-aixon-llm-and-llm-agent.md  2026-06-23-aixon-orchestrator.md  2026-06-23-aixon-retriever-embedding-connector.md  2026-06-23-aixon-server-and-protocol.md  2026-06-23-aixon-tool-agent-and-reasoning.md  2026-06-25-aixon-multimodal-input.md
docs/superpowers/specs/: 2026-06-23-aixon-framework-design.md
examples/client_tools/: README.md  main.py  requirements.txt
examples/mcp_tools/: README.md  main.py  requirements.txt
examples/reasoning/: README.md  main.py  requirements.txt
examples/reflective_review/: README.md  main.py  requirements.txt
examples/support_assistant/: .env.example  README.md  async_demo.py  async_retriever_demo.py  llm_config.py  main.py  requirements.txt  test_sp1_server_features.py  test_support_assistant.py
examples/support_assistant/agents/: __init__.py  knowledge_agent.py  orders_agent.py  support.py  triage.py
examples/support_assistant/connectors/: __init__.py  orders.py
examples/support_assistant/knowledge/: __init__.py  corpus.py  faq_retriever.py
examples/support_assistant/providers/: __init__.py  demo.py
examples/tool_shield_memo/: README.md  main.py
examples/tracing/: README.md  main.py
tests/: _cli_fakes.py  _fakes.py  _server_fakes.py  conftest.py  test_adapter_anthropic.py  test_adapter_openai.py  test_adapter_stream_multifield.py  test_agent.py  test_agent_thought_mode.py  test_agenttool_args_schema.py  test_anthropic_client_tools.py  test_as_tool.py  test_as_tool_neutral.py  test_astream_bridge_stop.py  test_async_agents.py  test_async_cancellation.py  test_async_retriever.py  test_async_tools.py  test_audit_agents.py  test_audit_core.py  test_audit_retrievers.py  test_audit_server.py  test_bug_sweep_agents.py  test_bug_sweep_infra.py  test_bug_sweep_server.py  test_bug_sweep_vendors.py  test_cli_chat_inprocess.py  test_cli_chat_remote.py  test_cli_fakes.py  test_cli_integration.py  test_cli_list.py  test_cli_new.py  test_cli_serve.py  test_cli_version.py  test_client_tools.py  test_connector.py  test_connector_async.py  test_coverage_extra.py  test_debug_tap.py  test_discovery.py  (+65 more)
