[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aixon"
version = "0.0.1"
description = "Declarative AI-agent framework — composable agents, multi-agent orchestration, and a protocol-decoupled server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jorge Henrique Moreira Santana", email = "jorge.henrique.moreira.santana@gmail.com" },
]
license = { text = "MIT" }
keywords = ["ai", "llm", "agents", "langgraph", "framework", "orchestration", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "httpx>=0.27", "pydantic>=2.0"]
cli = ["click>=8.0"]
llm = ["langchain>=1.0", "langchain-core>=1.0", "langgraph>=1.0"]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
google = ["langchain-google-genai>=2.0"]
all = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langgraph>=1.0",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
]

[project.urls]
Homepage = "https://github.com/JorgeHSantana/aixon"
Repository = "https://github.com/JorgeHSantana/aixon"
"Bug Tracker" = "https://github.com/JorgeHSantana/aixon/issues"

[project.scripts]
aixon = "aixon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aixon"]
