[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aixon"
version = "0.1.4"
description = "Declarative AI-agent framework — composable agents, multi-agent orchestration, and a protocol-decoupled server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jorge Henrique Moreira Santana", email = "jorge.henrique.moreira.santana@gmail.com" },
]
license = { text = "MIT" }
keywords = ["ai", "llm", "agents", "langgraph", "framework", "orchestration", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# langchain/langchain-core/langgraph are MANDATORY — every agent subtype and
# the orchestrator require them, so they are core deps (not an optional extra).
# `import aixon` always pulls them in. Provider bindings (openai/anthropic/
# google) stay optional; pick the one(s) you use.
dependencies = [
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langgraph>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "httpx>=0.27", "pydantic>=2.0"]
cli = ["click>=8.0", "openai>=1.0"]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
google = ["langchain-google-genai>=2.0"]
retrieval = ["httpx>=0.27"]
openai-embedding = ["langchain-openai>=0.2"]
tiktoken = ["tiktoken>=0.7"]
tavily = ["tavily-python>=0.7"]
ragie = ["ragie>=2"]
weaviate = ["weaviate-client>=4", "langchain-weaviate>=0.0.7", "langchain-text-splitters>=1"]
rerank = ["flashrank>=0.2"]
all = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "openai>=1.0",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "tiktoken>=0.7",
    "tavily-python>=0.7",
    "ragie>=2",
    "weaviate-client>=4",
    "langchain-weaviate>=0.0.7",
    "langchain-text-splitters>=1",
    "flashrank>=0.2",
]

[project.urls]
Homepage = "https://github.com/JorgeHSantana/aixon"
Repository = "https://github.com/JorgeHSantana/aixon"
"Bug Tracker" = "https://github.com/JorgeHSantana/aixon/issues"

[project.scripts]
aixon = "aixon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aixon"]
