[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aixon"
version = "0.1.13"
description = "Declarative AI-agent framework — composable agents, multi-agent orchestration, and a protocol-decoupled server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jorge Henrique Moreira Santana", email = "jorge.henrique.moreira.santana@gmail.com" },
]
license = { text = "MIT" }
keywords = ["ai", "llm", "agents", "langgraph", "framework", "orchestration", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# langchain/langchain-core/langgraph are MANDATORY — every agent subtype and
# the orchestrator require them, so they are core deps (not an optional extra).
# `import aixon` always pulls them in. Provider bindings (openai/anthropic/
# google) stay optional; pick the one(s) you use.
dependencies = [
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langgraph>=1.0",
    # click is core: the `aixon` console-script is installed unconditionally
    # (see [project.scripts] below), so its runtime dependency cannot live in
    # an optional extra — a bare install would traceback on `aixon --help`.
    "click>=8.0",
]

[project.optional-dependencies]
# fastapi/openai are needed to exercise the server + remote-chat code paths
# exercised by the test suite; click is a core dep (see above), not repeated here.
dev = [
    "pytest",
    "pytest-cov",
    "httpx2",  # starlette>=0.5x TestClient
    "fastapi",
    "openai",
    "mypy",
    # numpy is a transitive dep (via langchain-weaviate, pulled in by the
    # `weaviate`/`all` extras) that aixon never imports directly. numpy>=2
    # ships a bundled .pyi using PEP 695 `type X = ...` syntax, which mypy can
    # only parse under python_version >= 3.12 — it chokes with a hard syntax
    # error while following the import chain into it under our python_version
    # = 3.11 target (aixon's real minimum). Pinning below 2 for the dev/mypy
    # environment sidesteps a file we don't control instead of bumping our
    # target version; it does not affect runtime installs of aixon[weaviate].
    "numpy<2",
]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "httpx>=0.27", "pydantic>=2.0"]
cli = ["openai>=1.0"]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
google = ["langchain-google-genai>=2.0"]
zai = ["langchain-openai>=0.2"]
retrieval = ["httpx>=0.27"]
openai-embedding = ["langchain-openai>=0.2"]
tiktoken = ["tiktoken>=0.7"]
tavily = ["tavily-python>=0.7"]
ragie = ["ragie>=2"]
weaviate = ["weaviate-client>=4", "langchain-weaviate>=0.0.7", "langchain-text-splitters>=1"]
rerank = ["flashrank>=0.2"]
all = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "openai>=1.0",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "tiktoken>=0.7",
    "tavily-python>=0.7",
    "ragie>=2",
    "weaviate-client>=4",
    "langchain-weaviate>=0.0.7",
    "langchain-text-splitters>=1",
    "flashrank>=0.2",
]

[project.urls]
Homepage = "https://github.com/JorgeHSantana/aixon"
Repository = "https://github.com/JorgeHSantana/aixon"
"Bug Tracker" = "https://github.com/JorgeHSantana/aixon/issues"

[project.scripts]
aixon = "aixon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aixon"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
